Bug 331991 - Save as "Web Page, Complete" for HTML should include meta charset or encode all non-ASCII characters as entitiesp=Ryan Jones <sciguyryan@gmail.com>r=glazou, sr=peterv